Add contact and sample pages.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </nav>
       </header>
       <div class="logo">
-        <h2>Welcome!</h2>
+        <h2>Welcome!!</h2>
       </div>
       <footer></footer>
     </div>
